--- a/addCode/src/app/connection-data/components/connection-data.component.css
+++ b/addCode/src/app/connection-data/components/connection-data.component.css
@@ -4,7 +4,7 @@
   margin-left: 38%;
   margin-right: 38%;
   justify-content: center;
-  background-image: url(../../../assets/image/wallpaper-black.png);
+  background-image: url(../../../assets/image/wallpaper-black-min.png);
   background-repeat: no-repeat;
   background-size: 200%;
   color: white;
@@ -19,6 +19,7 @@ input {
   border-radius: 5px;
   margin-left: 10%;
   margin-right: 10%;
+  margin-bottom: 5%;
   width: 75%;
 }
 
@@ -46,4 +47,5 @@ button {
 .custom-control {
   text-align: right;
   margin-right: 15%;
+  margin-top: 15%;
 }
