--- a/addCode/src/app/connection-data/components/connection-data.component.html
+++ b/addCode/src/app/connection-data/components/connection-data.component.html
@@ -1,30 +1,15 @@
 <div class="custom-class-form">
-  <h2 class="navbar-light bg-dark">Datos de conexion</h2>
-    <form action="">
-      <label for="NameServer">Servidor</label><br />
-      <input
-        type="text"
-        name="NameServer"
-        class="form-control-plaintext"
-        placeholder="Nombre o direccion Ip del servidor"
-      /><br />
-      <label for="NameServer">Nombre</label><br />
-      <input
-        type="text"
-        name="nameDb"
-        class="form-control-plaintext"
-        placeholder="Nombre de la base de datos"
-      /><br />
-      <label for="NameServer">Clave</label><br />
-      <input
-        type="password"
-        name="password"
-        class="form-control-plaintext"
-        placeholder="clave de la base de datos"
-      /><br />
-      <div class="custom-control">
-      <button type="submit" class="btn btn-secondary">Cancelar</button>
-      <button type="submit" class="btn btn-success">Conectarme</button>
-      </div>
-    </form>
+  <h2 class="navbar-light bg-dark">Datos de conexión</h2>
+  <form [formGroup]="dataConnectionForm" (ngSubmit)="saveHost()">
+
+    <label for="host">Servidor</label>
+    <input id="host" type="text" formControlName="host" class="form-control-plaintext"
+      placeholder="Nombre o dirección IP del servidor" />
+
+    <div class="custom-control">
+      <button class="btn btn-secondary">Cancelar</button>
+      <button type="submit" class="btn btn-success" [disabled]="!dataConnectionForm.valid">Conectarme</button>
+    </div>
+
+  </form>
 </div>
