--- a/addCode/src/styles.css
+++ b/addCode/src/styles.css
@@ -2,6 +2,7 @@
 
 body {
   background-image: url(./assets/image/wallpaper_white-min.png);
+  background-size: cover;
   background-repeat: no-repeat;
   background-size: 100%;
 }
