se confuran los usuarios que devuelve el servidor para que la aplicacion no muestr el usuario generico

--- a/addCode/src/app/app.component.html
+++ b/addCode/src/app/app.component.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand link-secondary h1 text-light">AddCode</a>
     <h3 class="h4 text-secondary"></h3>
     <a routerLink="">
-      <img src="../assets/icons/gear.svg" />
+      <img src="assets/icons/gear.svg" alt="icon"/>
     </a>
   </div>
 </nav>
