--- a/addCode/src/app/entry-code/components/entry-code.component.html
+++ b/addCode/src/app/entry-code/components/entry-code.component.html
@@ -1,12 +1,24 @@
 <div class="content-input">
-<div class="custom-input">
-  <input type="text" class="form-control text-light bg-dark"  placeholder="Ingrese el código de barras">
+  <h1>esto es: {{ inputUser }}</h1>
 
-</div>
+  <div class="custom-input">
+    <input
+      type="text"
+      class="form-control text-light bg-dark"
+      placeholder="Ingrese el código de barras"
+      [(ngModel)]="inputUser"
+      (keydown.enter)="saveCode()"
+    />
+  </div>
 
   <div class="content-control">
-    <button class="btn btn-dark btn-lg ">Salir</button>
+    <!-- <a routerLink="./users">
+    <button class="btn btn-dark btn-lg">Salir</button>
+    </a> -->
+    <a routerLink="/users">
+      <button type="button" class="btn btn-dark btn-lg">salir</button>
+    </a>
   </div>
 </div>
 
-
+<!-- 2700550005507 -->
