--- a/addCode/src/app/users/components/users-components/users.component.css
+++ b/addCode/src/app/users/components/users-components/users.component.css
@@ -1,4 +1,3 @@
-
 .custom-card {
   background-image: url(../../../../assets/image/wallpaper-black-min.png);
   background-size: cover;
@@ -39,7 +38,8 @@ h4 {
   justify-content: center;
 }
 
-pagination-controls, .pagination-previous,
+
+ pagination-controls, .pagination-previous,
 .pagination-next {
   background-color: rgba(52, 58, 64, 1);
   border: none;
@@ -55,15 +55,18 @@ pagination-controls, .pagination-previous,
 
 
 
-.pagination-previous[disabled],
+ .pagination-previous[disabled],
 .pagination-next[disabled] {
   opacity: .5;
 }
 
 pagination-controls {
+  display: flex;
+  justify-content: center;
   border-radius: 10px;
   height: 50px;
   box-shadow: 10px 10px rgba(0, 0, 0, 0.2);
+  width: 350px;
 }
 
 
