--- a/addCode/src/app/users/components/users-components/users.component.html
+++ b/addCode/src/app/users/components/users-components/users.component.html
@@ -1,16 +1,20 @@
 
 <div class="row row-cols-md-4">
-  <div class="col mb-5 custom-content-cards" *ngFor="let user of users | paginate: { itemsPerPage: 8, currentPage: page }" >
-    <a routerLink="./">
+  <div class="col mb-5 custom-content-cards" *ngFor="let user of users | paginate: { itemsPerPage: 8, currentPage: page }">
+    <a routerLink="/userform/{{user.code}}/{{user.description}}">
       <div class="card text-start custom-card">
         <h4 class="card-title">{{user.description}}</h4>
-      <img class="card-img-top" src="../../../assets/image/user.jpeg" alt="Title">
+    <img class="card-img-top" src="../../../../assets/image/user.jpeg" alt="Title">
     </div>
     </a>
 
   </div>
 </div>
-<div class="custom-controls-pagination">
-  <pagination-controls previousLabel="Anterior" nextLabel="Siguiente" (pageChange)="page = $event"></pagination-controls>
+<div *ngIf="users.length > 8" class="custom-controls-pagination">
+  <pagination-controls
+  previousLabel="Anterior"
+  nextLabel="Siguiente"
+  [autoHide]="true"
+  (pageChange)="page = $event">
+ </pagination-controls>
 </div>
-
