--- a/addCode/src/app/users/components/users-components/users.component.css
+++ b/addCode/src/app/users/components/users-components/users.component.css
@@ -1,42 +1,56 @@
+.custom-content-cards {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+
 .custom-card {
   background-image: url(../../../../assets/image/wallpaper-black-min.png);
   background-size: cover;
   margin-top: 10px;
   margin-left: 10px;
-  display:flex;
-  align-items:center;
   height: 206px;
   width: 200px;
   border-radius: 10px 10px 20px 20px;
-  box-shadow: 10px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 8px 8px rgba(0, 0, 0, 0.6);
+  border-color: rgb(21, 22, 22);
+  border-width: 3px;
 
 }
 
+.custom-card, img {
+  display: flex;
+  align-items: center;
+
+}
+
+.user-name {
+  height: 25%;
+  width: 100%;
+}
+
+h4 {
+  height: 100%;
+  width: 100%;
+  color: white;
+  text-align: center;
+  border-radius: 10px 10px;
+  background-color: rgba(52, 58, 64, 1);
+}
+
+
 img {
   margin: 20px 10px 15px 10px;
-  height: 70%;
-  width: 70%;
-  margin-top: 10px;
+  margin-bottom: 10px;
+  height: 60%;
+  width: 60%;
   margin-bottom: 10px;
   border-radius: 10px 10px 20px 20px;
 }
 
 
 
-h4 {
-  border-radius: 10px 10px;
-  text-align: center;
-  background-color: rgba(52, 58, 64, 1);
-  color: white;
-  width: 100%;
-}
-
-
-.custom-content-cards {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-}
 
 
  pagination-controls, .pagination-previous,
