se converten las imagenes de binario a png par que puedan ser mostradas en cada una de los cards de usuarios

--- a/addCode/src/app/users/components/users-components/users.component.html
+++ b/addCode/src/app/users/components/users-components/users.component.html
@@ -12,7 +12,7 @@
         </div>
         <img
           class="card-img-top"
-          src="../../../../assets/image/user.jpeg"
+          [src]="user.image"
           alt="Title"
         />
       </div>
