--- a/addCode/src/app/users/components/users-components/users.component.css
+++ b/addCode/src/app/users/components/users-components/users.component.css
@@ -12,7 +12,7 @@
   margin-left: 10px;
   height: 206px;
   width: 200px;
-  border-radius: 10px 10px 20px 20px;
+  border-radius: 10px 10px;
   box-shadow: 8px 8px rgba(0, 0, 0, 0.6);
   border-color: rgb(21, 22, 22);
   border-width: 3px;
@@ -26,17 +26,18 @@
 }
 
 .user-name {
-  height: 25%;
+  height: 30%;
   width: 100%;
 }
 
 h4 {
+  border-color: rgb(21, 22, 22);
   height: 100%;
   width: 100%;
   color: white;
   text-align: center;
   border-radius: 10px 10px;
-  background-color: rgba(52, 58, 64, 1);
+  background-color: rgb(37, 40, 44);
 }
 
 
