--- a/addCode/src/app/users/components/login-user/login-user.component.html
+++ b/addCode/src/app/users/components/login-user/login-user.component.html
@@ -13,6 +13,7 @@
       input
       [type]="showPassword ? 'text' : 'password'"
       class="form-control text-light bg-dark custom-input"
+      (keydown.enter)="loginUser(code, password)"
       [(ngModel)]="password"
     />
 
