termina la primera version de la aplicacion

--- a/addCode/src/app/app.component.html
+++ b/addCode/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid app-tittle">
     <a class="navbar-brand link-secondary h1 text-light">AddCode</a>
     <h3 class="h4 text-secondary"></h3>
-    <a routerLink="">
+    <a routerLink="/connection">
       <img src="assets/icons/gear.svg" alt="icon"/>
     </a>
   </div>
